--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content=" MarVaxx: The all-in-one system for Vaccination in Marihatag, Surigao del
+      Sur"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -26,7 +27,7 @@
     </style>
 
     <title>
-      MarVaxx: The all-in-one system for Vaccination in Marihatag, Surigao del
+      MarVaxx - The all-in-one system for Vaccination in Marihatag, Surigao del
       Sur
     </title>
   </head>
